webroot/css/tourdb.css
/* http://colorschemedesigner.com/#3A425w0w0w0w0 */

@CHARSET "UTF-8";

body		{ margin: 0; padding: 0; font-family: Helvetica, sans-serif; font-size: 10pt; }

h1			{ font-weight: bold; font-size: 18pt; margin: 10px 0; }
h2			{ font-weight: bold; font-size: 13pt; margin: 8px 0; border-bottom: 1px solid #dddddd; }
h3			{ font-weight: bold; font-size: 11pt; margin: 6px 0; }

p			{ margin: 0 0 10px; }

hr			{ clear: both; border: 0; height: 1px; background: #dddddd; margin: 10px 0; }

a			{ color: #4188d3; text-decoration: none; }
a:HOVER		{ text-decoration: underline; }

a img		{ vertical-align: middle; border: 0; }

#page		{  }
#container	{ width: 1010px; margin: 0 auto; }

#header		{ height: 80px; text-align: right; }

#topnav		{ text-align: right; margin-right: 10px; }

#login_box				{ margin-bottom: 5px; }
#login_box .username	{ font-weight: bold; }

#breadcrumbs	{ margin: 10px 0; font-weight: bold; }
#breadcrumbs a	{ color: #04376c; }
#navheader		{ float: left; width: 200px; text-align: right; }
#contentheader	{ float: left; width: 800px; border: 1px solid #689cd3; margin-bottom: 5px; background: #689cd3; moz-border-radius:5px; /* Firefox */ webkit-border-radius:5px; /* Safari, Chrome */ border-radius:5px; /* CSS3 */ }
#leftnav		{ float: left; width: 200px; clear: left; }
#content		{ width: 800px; border: solid #dddddd; border-width: 1px; float: left; margin-bottom: 5px; padding: 10px 0 10px; min-height: 400px; moz-border-radius:5px; /* Firefox */ webkit-border-radius:5px; /* Safari, Chrome */ border-radius:5px; /* CSS3 */ }
#footer			{ clear: left; margin-left: 200px; margin-right: 10px; font-size: 8pt; }

#footer .globallinks	{ float: right; }
#footer .globallinks a	{ margin-left: 10px; }


.inner				{ margin: 0 10px; }
.half				{ width: 390px; float: left; }
.quarter			{ width: 195px; float: left; }
.third				{ width: 260px; float: left; }
.twothirds			{ width: 520px; float: left; }
.threequarters		{ width: 585px; float: left; }
.columncontainer	{ overflow: hidden; }

.message		{ margin-bottom: 10px; padding: 5px; background: #ffe873; }

/* paginator */
.paginator			{ margin-top: 10px; text-align: center; }
.paginator div		{ display: inline; }
.paginator div.prev	{ margin-right: 10px; }
.paginator div.next	{ margin-left: 10px; }

/* menu */
ul.menu				{ margin: 10px 0 0; padding: 0; list-style: none; }
ul.menu ul			{ margin: 5px 0 10px; padding-left: 15px; }
ul.menu li			{ list-style: none; text-align: right; }
ul.menu .caption	{ font-weight: bold; border-bottom: 1px solid #dddddd; }

.infoitem			{ clear: left; overflow: hidden; margin-bottom: 10px; }
.infoitem div		{ float: left; }
.infoitem .label	{ font-weight: bold; width: 130px; }
.infoitem .content	{ max-width: 650px; }

/* drag drop widget */
.dd-container				{ margin: 10px; }
.dd-all						{ float: left; }
.dd-assoc					{ float: right; }
.dd-container .ui-droppable	{ width: 350px; height: 350px; overflow: auto; border: 2px solid #808080; }
.dd-container .ui-draggable	{ padding: 6px 6px 6px 24px; margin: 2px; border: 1px solid #808080; background: #ffffff; width: 290px; }
.dd-container .active		{ border: 2px solid #80bfff; }
.dd-container .hover		{ background: #eeeeee; border: 2px solid #80bfff; }

.ui-draggable.role			{ background: #ffffff url(../img/role.png) no-repeat 4px center; }

/* calendar widget */
.calendar								{ margin: 10px auto; width: 770px }
.calendar .title						{ background: #dddddd; border: 1px solid #808080; font-size: 11pt; font-weight: bold; padding: 3px; text-align: center; }
.calendar .title .previous				{ float: left; }
.calendar .title .next					{ float: right; }
.calendar .week							{ position: relative; height: 131px; }
.calendar .day							{ float: left; width: 107px; background: #eeeeee; height: 130px; border: solid #808080; border-width: 0 1px 1px 0; padding-left: 2px; }
.calendar .day.monday					{ border-left-width: 1px; width: 106px; }
.calendar .day.sunday					{ color: #aa0000; font-weight: bold; }
.calendar .slotcontainer				{ /*background: none repeat scroll 0 0 #DD00FF;*/ overflow: auto; height: 110px; position: absolute; top: 20px; width: 100%; }
.calendar .scrollbar					{ position: absolute; left: 774px; top: 10px; height: 110px; width: 5px; }
.calendar .scrollbar .ui-slider-handle	{ width: 9px; height: 15px; left: -3px; }
.calendar .slot							{ margin-bottom: 3px; }
.calendar .appointment					{ position: relative; }
.calendar .appointment.offset2			{ left: 110px; }
.calendar .appointment.offset3			{ left: 220px; }
.calendar .appointment.offset4			{ left: 330px; }
.calendar .appointment.offset5			{ left: 440px; }
.calendar .appointment.offset6			{ left: 550px; }
.calendar .appointment.offset0			{ left: 660px; }
.calendar .appointment.width1			{ width: 110px; }
.calendar .appointment.width2			{ width: 220px; }
.calendar .appointment.width3			{ width: 330px; }
.calendar .appointment.width4			{ width: 440px; }
.calendar .appointment.width5			{ width: 550px; }
.calendar .appointment.width6			{ width: 660px; }
.calendar .appointment.width7			{ width: 770px; }
.calendar .appointment .label			{ background: #cccccc; font-size: 10pt; padding: 0 4px; overflow: hidden; white-space: nowrap; margin: 0 10px; border-radius: 2px; cursor: default; }
.calendar .appointment.highlight .label	{ background: #ffffdd; }
.calendar .appointment.wrapstart .label	{ padding-right: 20px; }
.calendar .appointment.wrapend .label	{ padding-right: 20px; }

.popup				{ position: absolute; display: none; z-index: 6000; padding: 3px; border-radius: 2px; box-shadow: 3px 3px 3px #dddddd, -3px 3px 3px #dddddd, 3px -3px 3px #dddddd, -3px -3px 3px #dddddd;}
.popup > div		{ font-size: 8pt; }
.popup .title		{ font-weight: bold; margin-bottom: 4px; font-size: 10pt; }
.popup table td		{ white-space: nowrap; }
.popup table .label	{ font-weight: bold; text-align: right; }

/* actions */
a.iconaction			{ width: 16px; height: 16px; display: block; float: left; margin-right: 4px; background: center center no-repeat; }
a.iconaction.delete		{ background-image: url(../img/bin_closed.png); }

/* forms */
.input				{ clear: left; margin-bottom: 15px; }
.input.text label, .input.password label, .input.textarea label, .input.select > label, .input.datetime label, .input.radio label:FIRST-CHILD
	{ width: 130px; float: left; font-weight: bold; }
.input.required > label:after	{ content: ' *'; }

.input.radio input:FIRST-CHILD	{ margin-left: 130px; }

.input.error
	{ background: #ffe873; padding: 4px 0 0 4px; }
.input.error.text label, .input.error.password label, .input.error.textarea label, .input.error.select > label, .input.error.datetime label, .input.error.radio label:FIRST-CHILD
	{ width: 125px; }

.input.text input, .input.password input, .input.textarea textarea
	{ width: 300px; border: 1px solid #808080; padding: 2px; }

.input.textarea textarea	{ height: 150px; }

.input.checkbox					{ margin-left: 130px; }
.input.select .checkbox			{ float: left; margin-right: 4px; }

.input.text input.dateTime	{ width: 150px; background: #ffffff url(../img/calendar.png) no-repeat 2px center; padding-left: 24px; }

.input .input				{ clear: none; display: inline; }
.input .input.text label	{ float: none; margin: 0 10px 0 25px; }

select	{ border: 1px solid #808080; }

.submit	{ margin: 20px 0; text-align: right; }

.submit.obtrusive							{ text-align: left; }
.submit.obtrusive input[type=submit]		{ padding: 10px; background-color: #689cd3; border: 0; border-radius: 5px; font-weight: bold; }
.submit.obtrusive input[disabled=disabled]	{ background-color: #dddddd; }
.obtrusive.links							{ margin-top: 25px; text-align: right; }
.obtrusive.text								{ margin-top: 20px; }

.daterange > div.input						{ float: left; clear: none; }
.daterange > div.input label				{ width: auto; margin: 0 10px; }
.daterange > div.input:FIRST-CHILD label	{ width: 130px; margin: 0; }

.error-message	{ background: transparent url(../img/error.png) no-repeat 4px center; padding: 4px 0 4px 24px; }

fieldset										{ border: 1px solid #dddddd; padding: 8px; margin: 0; }
fieldset.collapsible							{ border-width: 1px 0 0; padding: 8px 0; }
fieldset.collapsible legend						{ cursor: pointer; padding-left: 20px; background: #ffffff no-repeat 4px center; color: #4188d3; }
fieldset.collapsible legend:hover				{ text-decoration: underline; }
fieldset.collapsible.collapsed legend			{ background-image: url(../img/fieldset_collapsed.png); }
fieldset.collapsible.expanded legend			{ background-image: url(../img/fieldset_expanded.png); }
fieldset.collapsible.expanded .collapsedtext	{ display: none; }
fieldset.collapsible.expanded .expandedtext		{ display: inline; }
fieldset.collapsible.collapsed .collapsedtext	{ display: inline; }
fieldset.collapsible.collapsed .expandedtext	{ display: none; }
fieldset.collapsible.expanded legend			{ background-image: url(../img/fieldset_expanded.png); }
fieldset.collapsible.collapsed > div			{ display: none; }

fieldset .half			{ width: 381px; }

/* tables */
table.list				{ width: 100%; border-collapse: collapse; }
table.list th			{ background: #dddddd; padding: 4px; text-align: left; white-space: nowrap; }
table.list th a			{ padding-right: 16px; background: transparent no-repeat right center; }
table.list th a.asc		{ background-image: url(../img/table_sort_asc.png); }
table.list th a.desc	{ background-image: url(../img/table_sort_desc.png); }
table.list td			{ padding: 4px; }
table.list tr.even td	{ background: #eeeeee; }
table.list tr:HOVER td	{ background: #ffffdd; }

/* tours */
.tourClassification					{ white-space: nowrap; }
.tours .adjacent-tours-container	{ margin-left: 10px; }
.tours .adjacent-tours-container .open-calendar	{ float: right; background: url(../img/calendar.png) no-repeat 0 center; padding-left: 18px; }
.tours .adjacent-tours				{ border: 1px solid #808080; margin-top: 4px; height: 500px; overflow: auto; }
.tours .adjacent-tour				{ margin: 2px; padding: 5px; border: 1px solid #808080; }
.tours .adjacent-tour .title		{ font-weight: bold; overflow: hidden; white-space: nowrap; }
.tours .adjacent-tour .date, .tours .adjacent-tour .tourguide
	{ font-size: 8pt; }
.tours .input.text input, .tours .input.textarea textarea
	{ width: 384px; }
.tours.add .input.textarea textarea, .tours.edit .input.textarea textarea
	{ height: 250px; }
.tours .input.text input.dateTime			{ width: 150px; }
table.tours .tourweek, table.tours .withmountainguide
	{ text-align: center; }

.toureditbar	{ text-align: right; margin-bottom: 10px; font-size: 8pt; }
.toureditbar a	{ margin-left: 10px; }

.checkbox-container			{ width: 390px; float: left; }
.checkbox-container > div	{ float: left; clear: left; }

#TourParticipationNoteParticipant	{ width: 610px; }

/* users */
.users.login .input.text input, .users.login .input.password input
	{ width: 200px; }
.users.login .requestNewPassword	{ margin-left: 130px; }
.users.activate_account .input label	{ width: 230px; }
.users .dataPrivacyStatement	{ border: 1px solid #dddddd; height: 400px; overflow: auto; padding: 4px; margin-bottom: 10px;}

/* profiles */
.profiles .input label		{ width: 125px; }
.profiles .input.text input	{ width: 230px; }
.profiles .input.text input#ProfileExtraaddressline, .profiles .input.text input#ProfileEmergencycontact1Address
	{ width: 610px; }
.profiles .experience .input > label	{ width: 200px; }
#ProfileAdditionalequipment, #ProfileHealthinformation	{ width: 610px; }
.profiles.view table td	{ vertical-align: top; }

/* tourguidereports */
.tourguidereports .input label { width: 200px; }
.tourguidereports .expenses .input.text input { width: 100px; }
#TourGuideReportDescription	{ width: 500px; }
#TourGuideReportSubstituteTour { width: 500px; }

